--- a/styles.css
+++ b/styles.css
@@ -314,7 +314,7 @@ main {
   color: var(--success);
   min-width: 90px;
   text-align: right;
-  align-self: start;
+  align-self: center;
 }
 
 .qty-input {
