--- a/styles.css
+++ b/styles.css
@@ -1047,9 +1047,10 @@ footer {
   }
   
   .actions #main-submit-btn {
-    padding: 0 var(--spacing-md);
-    font-size: 13px;
-    height: 44px;
+    padding: 0 var(--spacing-lg);
+    font-size: 14px;
+    height: 48px;
+    color: white;
   }
   
   .buttons {
