--- a/styles.css
+++ b/styles.css
@@ -640,6 +640,16 @@ main {
     flex-direction: column;
   }
   
+  .search-input {
+    height: 56px;
+    font-size: 18px;
+  }
+  
+  .btn-search {
+    height: 56px;
+    font-size: 16px;
+  }
+  
   .product-result {
     grid-template-areas:
       "info info"
